name:                reactive-stm
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     
      Reactive
  -- other-modules:       
  -- other-extensions:    

  build-depends:       
      base >=4.7 && <4.8,
      stm == 2.4.*,
      transformers == 0.4.*,
      clock == 0.4.*

  ghc-options: -Wall -threaded -O2

  hs-source-dirs:      src/lib
  default-language:    Haskell2010

executable Test
  main-is: Test.hs
  hs-source-dirs: src/apps
  ghc-options: -Wall -threaded -O2
  default-language:    Haskell2010
  build-depends: 
      base,
      reactive-stm,
      stm == 2.4.*,
      transformers == 0.4.*
